// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Base Button Snapshot should render with large size 1`] = `
<div>
  <button
    class="css-1h9mfik"
    id="testId"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with small size 1`] = `
<div>
  <button
    class="css-1iav34z"
    id="testId"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated color 1`] = `
<div>
  <button
    class="css-140lgkh"
    id="testId"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated shape 1`] = `
<div>
  <button
    class="css-wjxycg"
    id="testId"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated textTransform 1`] = `
<div>
  <button
    class="css-1yq9yqh"
    id="testId"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated variant 1`] = `
<div>
  <button
    class="css-k9i13r"
    id="testId"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Icon Only Button Snapshot should render with large size 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-cna0ue"
    icon="[object Object]"
    id="testId"
  >
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="24"
      viewBox="0 0 29.37 21.88"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon Only Button Snapshot should render with small size 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-jjqtom"
    icon="[object Object]"
    id="testId"
  >
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="14"
      viewBox="0 0 29.37 21.88"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon Only Button Snapshot should render with updated color 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-1hcpzx8"
    icon="[object Object]"
    id="testId"
  >
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="18"
      viewBox="0 0 29.37 21.88"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon Only Button Snapshot should render with updated shape 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-43hqe"
    icon="[object Object]"
    id="testId"
  >
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="18"
      viewBox="0 0 29.37 21.88"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon Only Button Snapshot should render with updated variant 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-jryr46"
    icon="[object Object]"
    id="testId"
  >
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="18"
      viewBox="0 0 29.37 21.88"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with large size 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-1h9mfik"
    icon="[object Object]"
    id="testId"
  >
    <span
      class="css-1apg407-SpanTextLeft e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="20"
      viewBox="0 0 29.37 21.88"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with medium size 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-1d1yfz1"
    icon="[object Object]"
    id="testId"
  >
    <span
      class="css-4fhr0b-SpanTextLeft e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 29.37 21.88"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with small size 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-1iav34z"
    icon="[object Object]"
    id="testId"
  >
    <span
      class="css-4fhr0b-SpanTextLeft e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="12"
      viewBox="0 0 29.37 21.88"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with updated color 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-140lgkh"
    icon="[object Object]"
    id="testId"
  >
    <span
      class="css-4fhr0b-SpanTextLeft e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 29.37 21.88"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with updated shape 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-1d1yfz1"
    icon="[object Object]"
    id="testId"
  >
    <span
      class="css-4fhr0b-SpanTextLeft e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 29.37 21.88"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with updated text transform 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-1yq9yqh"
    icon="[object Object]"
    id="testId"
  >
    <span
      class="css-4fhr0b-SpanTextLeft e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 29.37 21.88"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with updated variant 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-k9i13r"
    icon="[object Object]"
    id="testId"
  >
    <span
      class="css-4fhr0b-SpanTextLeft e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 29.37 21.88"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;
